--- a/css/style.css
+++ b/css/style.css
@@ -36,17 +36,11 @@ ul.summary_links li {
   background: #f0f0f0;
 }
 
-div.docstring, p.docstring { margin-right: 6em; }
+section.docstring, p.docstring { margin-right: 6em; }
 .docstring h1, .docstring h2, .docstring h3, .docstring h4 { padding: 0; border: 0; border-bottom: 0; }
 .docstring h1 { font-size: 1.3em; }
 .docstring h2 { font-size: 1.2em; }
 .docstring h3, .docstring h4 { font-size: 1em; padding-top: 10px; }
-.docstring pre, .codeblock, .elixir {
-  padding: 0.5em;
-  border: #ffe0bb dotted 1px;
-  background: #fffde8;
-  display: block;
-}
 
 div.breadcrumbs {
   padding-bottom: 0.5em;
